--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=ENS210
 version=0.5.0
-author=Maarten Pennings <maartenpennings@hotmail.com>
-maintainer=Maarten Pennings <maartenpennings@hotmail.com>
+author=Maarten Pennings
+maintainer=Maarten Pennings
 sentence=Arduino library for the ENS210 relative humidity and temperature sensor with I2C interface from ams
 paragraph=This library controls the ENS210. The main feature of this library is performing a single shot measurement, retrieving the measurement data, and checking the CRC. Other features include reset, power control and obtaining version information. This library has functions to convert to Kelvin, Celsius and Fahrenheit.
 category=Device Control
-url=http://www.fampennings.nl
+url=https://github.com/maarten-pennings/ENS210
 architectures=*
